--- a/src/SiteImprove.Umbraco.Plugin.csproj
+++ b/src/SiteImprove.Umbraco.Plugin.csproj
@@ -104,6 +104,7 @@
       <HintPath>packages\UmbracoCms.Core.7.1.9\lib\SQLCE4Umbraco.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
